test/expected/declare_o_arrow_rk_pk.out
declare -> as operator (reference to S) returning pointer to S
                        ^
25: error: member operator "->" must have exactly 0 parameters
